# Astrospectra-ml

./: .gitignore  README.md  app.py  pyproject.toml
.github/workflows/: tests.yml
astrospectra/: preprocessing.py  spectrum.py
data/manifests/: medium_dataset.csv
docs/: model_card.md
scripts/: build_medium_dataset.py  build_processed_dataset.py  compare_classical_models.py  detect_anomalies.py  download_medium_dataset.py  download_one_spectrum.py  download_small_dataset.py  inspect_spectrum.py  plot_spectrum.py  plot_tuned_mistakes.py  preprocess_one_spectrum.py  train_baseline_classifier.py  train_cnn_classifier.py  train_medium_baseline.py  train_random_forest.py  tune_medium_baseline.py  visualize_processed_classes.py
tests/: test_preprocessing.py
