[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "astrospectra-ml"
version = "0.1.0"
description = "Machine-learning workbench for astronomical spectra."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "numpy>=1.26",
    "matplotlib>=3.8",
    "astropy>=6.0",
    "astroquery>=0.4.11",
]

[project.optional-dependencies]
dev = [
    "pytest>=8",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["astrospectra*"]

[tool.pytest.ini_options]
testpaths = ["tests"]